fix(scrollbar): Fixed issue with scrollbar

--- a/scripts/apps/users/styles/users.scss
+++ b/scripts/apps/users/styles/users.scss
@@ -213,15 +213,10 @@
 */
 
 .user-details-pane {
-    // position: absolute;
-    // top: 48px;
-    // left: 0;
-    // right: 0;
-    // bottom: 0;
-
     position: relative;
-    height: 100vh;
     width: 100%;
+    height: calc(100% - 48px);
+    overflow: auto;
 
     ::-webkit-scrollbar {
         border-left: 9px solid #fff;
